@@ -1,0 +1,15 @@
+When /^I get the first item from the ordered list$/ do
+  @element = @page.ol_id_element[0]
+end
+
+When /^I search for the ordered list by "([^\"]*)"$/ do |how|
+  @list = @page.send "ol_#{how}_element"
+end
+
+When /^I search for the ordered list by "([^"]*)" and "([^"]*)"$/ do |param1, param2|
+  @list = @page.send "ol_#{param1}_#{param2}_element"
+end
+
+When /^I search for the ordered list while the script is executing$/ do
+  @list = @page.ordered_list_element(:id => 'ol_id')
+end
