@@ -31,3 +31,8 @@ Feature: Unordered list
     | param1 | param2 |
     | class  | index  |
     | name   | index  |
+
+  Scenario: Finding a unordered list dynamically
+    When I search for the unordered list while the script is executing
+    And I get the first item from the list
+    Then the list items text should be "Item One"
